 * Fix the inter-test delay in the RDM tests to work with values less than 1s.

 Internal:
 * Changed to a non-recursive build. Reduced build times by 5-25%.
 * Convert more of our programs to our flags module
 * Standardise the bool flag behaviour to require an argument like
   string and int do, add a default bool for the old use case.

21/6/2014 ola-0.9.1
 Features:
 * Pretty print IPV4 addresses within the Python RDM code.
 * Add some additional slot definitions and status messages.
 * Add a timestamp to model data filenames so they're unique.
 * Allow OSC ports to be looped.
 * Add the ability to reload plugins via RPC.
 * Added a plugin which uses the onboard UART.
 * Added a Python fade controller demo.

 API:
 * Change GetIdentifyMode to GetIdentifyDevice in the RDM API to clarify it's
   the IDENTIFY_DEVICE PID not the newer IDENTIFY_MODE one.

 RDM Tests:
 * Added the inter-test delay option to the Web UI.
 * Show transaction numbers in the responder tests to aid debugging
 * Don't warn about unknown slot definitions if they are manufacturer ones
 * Added a number of missing Get...WithData tests.

 Bugs:
 * Fix sensor numbering from 0 on web UI so it matches CLI
 * Fix the minimum and maximum level supported RDM tests
 * Stop the Python client throwing an AttributeError if the universe doesn't
   exist.
 * Ensure the RDM Model Collector works if the fixture doesn't have personality
   descriptions.
 * Only try and fetch supported params for manufacturer PIDs in the model
   collector.
 * Fix an issue with strings in hash maps on OS X 10.5
 * Ensure Rpc_pb2.py is always built.
 * Fix the recent code changes to work with FreeBSD, NetBSD and OpenBSD
 * Stop ola_trigger segfaulting at startup - #409

 Internal:
 * Convert stringstream to ostringstream where possible
 * Tidy up copyright messages so we're Debian compliant.
 * Correct FSF address within licenses
 * Removed #ifdefs from the installed headers.
 * Clean up the ShowNet code.