@@ -13,7 +13,7 @@
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  *
- * ArtnetConfigMessages.proto
+ * ArtNetConfigMessages.proto
  * Defines the protocol buffers used to configure the Artnet device
  * Copyright (C) 2005 Simon Newton
  */
