@@ -21,10 +21,10 @@
 __author__ = 'nomis52@gmail.com (Simon Newton)'
 
 from ola.ClientWrapper import ClientWrapper
-from ola import ArtnetConfigMessages_pb2
+from ola import ArtNetConfigMessages_pb2
 
 def ArtNetConfigureReply(state, response):
-  reply = ArtnetConfigMessages_pb2.Reply()
+  reply = ArtNetConfigMessages_pb2.Reply()
   reply.ParseFromString(response)
   print 'Short Name: %s' % reply.options.short_name
   print 'Long Name: %s' % reply.options.long_name
@@ -36,7 +36,7 @@ def ArtNetConfigureReply(state, response):
 device_alias = 1
 wrapper = ClientWrapper()
 client = wrapper.Client()
-artnet_request = ArtnetConfigMessages_pb2.Request()
+artnet_request = ArtNetConfigMessages_pb2.Request()
 artnet_request.type = artnet_request.ARTNET_OPTIONS_REQUEST
 client.ConfigureDevice(device_alias, artnet_request.SerializeToString(),
                        ArtNetConfigureReply)
