@@ -33,6 +33,7 @@ x/y/2014 ola-0.9.2
  * Convert more of our programs to our flags module
  * Standardise the bool flag behaviour to require an argument like
    string and int do, add a default bool for the old use case.
+ * Standardise ArtnetConfigMessages to ArtNetConfigMessages and ripple related changes through.
 
 21/6/2014 ola-0.9.1
  Features:
